# Bifrons

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
bifrons/: cli.py  core.py
